[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operating-system-support"
version = "0.1.0"
description = "An AI agent that can interact with your operating system using shell commands and Python execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CJHwong", email = "your-email@example.com" },
]
keywords = ["ai", "agent", "ollama", "shell", "python", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ollama>=0.5.3",
]

[project.urls]
Homepage = "https://github.com/CJHwong/operating-system-support"
Repository = "https://github.com/CJHwong/operating-system-support"
Issues = "https://github.com/CJHwong/operating-system-support/issues"

[project.scripts]
oss = "oss:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["oss.py"]

[tool.hatch.build.targets.sdist]
include = ["oss.py", "README.md", "pyproject.toml"]
